Impr [tools/front][logs]: Add initial config for logs
- Add icon
- Base navigation
- Base screen + cubit

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -37,6 +37,8 @@
   "rewritePathToLabel": "Rewrite Path To",
   "rewritePathToHint": "/",
   "preview": "Preview",
+  "section_logs": "--------- LOGS ---------",
+  "logs": "Http logs",
   "section_errors": "--------- ERRORS ---------",
   "noData": "Nothing found here",
   "genericError": "An error has ocurred",
