--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -37,6 +37,8 @@
   "rewritePathToLabel": "Reescribie Path a",
   "rewritePathToHint": "/",
   "preview": "Previsualizar",
+  "section_logs": "--------- LOGS ---------",
+  "logs": "Logs http",
   "section_errors": "--------- ERRORS ---------",
   "noData": "No hay datos",
   "genericError": "Algo ha salido mal",
