Impr [tools/front][auth]: Initial version of remember me

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -11,6 +11,7 @@
   "passwordLabel": "Password",
   "passwordHint": "admin123**",
   "login": "Login",
+  "rememberMe": "Remember me",
   "section_validations": "--------- VALIDATIONS ---------",
   "requiredField": "Required field",
   "section_actions": "--------- ACTIONS ---------",
