--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -11,6 +11,7 @@
   "passwordLabel": "Contraseña",
   "passwordHint": "admin123**",
   "login": "Login",
+  "rememberMe": "Recordarme",
   "section_validations": "--------- VALIDATIONS ---------",
   "requiredField": "Campo requerido",
   "section_actions": "--------- ACTIONS ---------",
