Impr [tools/front][logs]: Fix column sizes and correct resize

--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -40,6 +40,12 @@
   "preview": "Previsualizar",
   "section_logs": "--------- LOGS ---------",
   "logs": "Logs http",
+  "columnTimestamp": "Timestamp",
+  "columnMethod": "Método",
+  "columnPath": "Path",
+  "columnRoute": "Ruta",
+  "columnHttpStatus": "Estado HTTP",
+  "columnRequestDuration": "Duración",
   "section_errors": "--------- ERRORS ---------",
   "noData": "No hay datos",
   "genericError": "Algo ha salido mal",
