--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -40,6 +40,12 @@
   "preview": "Preview",
   "section_logs": "--------- LOGS ---------",
   "logs": "Http logs",
+  "columnTimestamp": "Timestamp",
+  "columnMethod": "Method",
+  "columnPath": "Path",
+  "columnRoute": "Route",
+  "columnHttpStatus": "HTTP Status",
+  "columnRequestDuration": "Duration",
   "section_errors": "--------- ERRORS ---------",
   "noData": "Nothing found here",
   "genericError": "An error has ocurred",
