Impr [tools/front][intl]: Add intls for logs filter

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -40,12 +40,29 @@
   "preview": "Preview",
   "section_logs": "--------- LOGS ---------",
   "logs": "Http logs",
+  "search": "Search",
   "columnTimestamp": "Timestamp",
   "columnMethod": "Method",
   "columnPath": "Path",
   "columnRoute": "Route",
   "columnHttpStatus": "HTTP Status",
   "columnRequestDuration": "Duration",
+  "section_log_details": "--------- LOG-DETAILS ---------",
+  "logDetails": "Details",
+  "section_log_filters": "--------- LOG-FILTERS ---------",
+  "filter": "Filter",
+  "applyFilters": "Apply filters",
+  "clearFilters": "Clear filters",
+  "filterHttpStatusLabel": "HTTP Status",
+  "filterHttpStatusHint": "200",
+  "filterMethodLabel": "HTTP Method",
+  "filterMethodHint": "Select HTTP Method (GET, POST)",
+  "filterRouteLabel": "Route",
+  "filterRouteHint": "Select route (Admin, No-Route)",
+  "filterNoRouteName": "No-Route",
+  "filterDateHint": "Select date",
+  "filterFromDateLabel": "From date",
+  "filterToDateLabel": "To date",
   "section_errors": "--------- ERRORS ---------",
   "noData": "Nothing found here",
   "genericError": "An error has ocurred",
