--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -40,12 +40,29 @@
   "preview": "Previsualizar",
   "section_logs": "--------- LOGS ---------",
   "logs": "Logs http",
+  "search": "Buscar",
   "columnTimestamp": "Timestamp",
   "columnMethod": "Método",
   "columnPath": "Path",
   "columnRoute": "Ruta",
   "columnHttpStatus": "Estado HTTP",
   "columnRequestDuration": "Duración",
+  "section_log_details": "--------- LOG-DETAILS ---------",
+  "logDetails": "Detalles",
+  "section_log_filters": "--------- LOG-FILTERS ---------",
+  "filter": "Filtrar",
+  "applyFilters": "Aplicar filtros",
+  "clearFilters": "Limpiar filtros",
+  "filterHttpStatusLabel": "Estado HTTP",
+  "filterHttpStatusHint": "200",
+  "filterMethodLabel": "Método HTTP",
+  "filterMethodHint": "Seleccion método HTTP (GET, POST)",
+  "filterRouteLabel": "Ruta",
+  "filterRouteHint": "Selecciona ruta (Admin, Sin-Ruta)",
+  "filterNoRouteName": "Sin-Ruta",
+  "filterDateHint": "Selecciona fecha",
+  "filterFromDateLabel": "Fecha inicial",
+  "filterToDateLabel": "Fecha final",
   "section_errors": "--------- ERRORS ---------",
   "noData": "No hay datos",
   "genericError": "Algo ha salido mal",
