Impr [tools/front][logs]: Add backup logs

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -47,6 +47,7 @@
   "columnRoute": "Route",
   "columnHttpStatus": "HTTP Status",
   "columnRequestDuration": "Duration",
+  "export": "Export",
   "section_log_details": "--------- LOG-DETAILS ---------",
   "logDetails": "Details",
   "section_log_filters": "--------- LOG-FILTERS ---------",
