--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -47,6 +47,7 @@
   "columnRoute": "Ruta",
   "columnHttpStatus": "Estado HTTP",
   "columnRequestDuration": "Duración",
+  "export": "Exportar",
   "section_log_details": "--------- LOG-DETAILS ---------",
   "logDetails": "Detalles",
   "section_log_filters": "--------- LOG-FILTERS ---------",
