Impr [tools/front][logs]: Rework show log details

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -50,6 +50,16 @@
   "export": "Export",
   "section_log_details": "--------- LOG-DETAILS ---------",
   "logDetails": "Details",
+  "logsDetailsTimestamp": "Timestamp",
+  "logsDetailsSourceIp": "Source IP",
+  "logsDetailsHttpStatus": "HTTP Status",
+  "logsDetailsHttpMethod": "Method",
+  "logsDetailsRequestDuration": "Duration",
+  "logsDetailsUserAgent": "User Agent",
+  "logsDetailsRoute": "Route",
+  "logsDetailsRouteName": "Name",
+  "logsDetailsRoutePath": "Path",
+  "logsDetailsRouteId": "Id",
   "section_log_filters": "--------- LOG-FILTERS ---------",
   "filter": "Filter",
   "applyFilters": "Apply filters",
