--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -50,6 +50,16 @@
   "export": "Exportar",
   "section_log_details": "--------- LOG-DETAILS ---------",
   "logDetails": "Detalles",
+  "logsDetailsTimestamp": "Timestamp",
+  "logsDetailsSourceIp": "Dirección IP",
+  "logsDetailsHttpStatus": "Estado HTTP",
+  "logsDetailsHttpMethod": "Método",
+  "logsDetailsRequestDuration": "Duración",
+  "logsDetailsUserAgent": "User Agent",
+  "logsDetailsRoute": "Ruta",
+  "logsDetailsRouteName": "Nombre",
+  "logsDetailsRoutePath": "Path",
+  "logsDetailsRouteId": "Id",
   "section_log_filters": "--------- LOG-FILTERS ---------",
   "filter": "Filtrar",
   "applyFilters": "Aplicar filtros",
