Impr [tools/front][logs]: Fix search hint
Specify the fields against the query will be matched

--- a/tools/api_gateway_front/lib/l10n/arb/app_en.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_en.arb
@@ -40,7 +40,7 @@
   "preview": "Preview",
   "section_logs": "--------- LOGS ---------",
   "logs": "Http logs",
-  "search": "Search",
+  "search": "Search against User Agent, Source IP, Path or Route",
   "columnTimestamp": "Timestamp",
   "columnMethod": "Method",
   "columnPath": "Path",
