--- a/tools/api_gateway_front/lib/l10n/arb/app_es.arb
+++ b/tools/api_gateway_front/lib/l10n/arb/app_es.arb
@@ -40,7 +40,7 @@
   "preview": "Previsualizar",
   "section_logs": "--------- LOGS ---------",
   "logs": "Logs http",
-  "search": "Buscar",
+  "search": "Buscar contra User Agent, Dirección IP, Path o Ruta",
   "columnTimestamp": "Timestamp",
   "columnMethod": "Método",
   "columnPath": "Path",
